Moving ASM to work with Java 21